2006-03-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-make-tool-bar): Use add-hook.
	Suggested by Stefan Monnier <monnier@iro.umontreal.ca>.

	* gnus-art.el (gnus-article-browse-delete-temp-files): Simplify
	resetting gnus-article-browse-html-temp-list.

	* gmm-utils.el (gmm-image-load-path-for-library): Sync with
	mh-compat.el revision 1.9 in Emacs.  Rename `gmm-image-load-path'.
	Add example to docstring.  Rename local variables.  Move error
	checks to default case in cond and simplify.

2006-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-w3m-cid-retrieve-1): Check carefully whether
	handle is multipart when calling it recursively.
	(mm-w3m-cid-retrieve): Display warning if retrieving fails.

2006-03-03  Daniel Pittman <daniel@rimspace.net>

	* nnimap.el (nnimap-request-update-info-internal): Optimize.

2006-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-tool-bar-gnome): Check if gnus-topic.el
	is loaded.

	* gnus-sum.el (gnus-summary-tool-bar-gnome): Check if spam.el is
	loaded.

2006-03-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-with-unibyte-current-buffer): Change "Emacs 23"
	to "Emacs 23 (unicode)" in doc string.

	* gnus-sum.el (gnus-summary-set-display-table): Change "Emacs 23" to
	"Emacs 23 (unicode)" in comment.

2006-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-get-part): Don't use
	mm-with-unibyte-current-buffer.

	* gnus-sum.el (gnus-summary-set-display-table): Don't nix out
	characters 160 through 255 in Emacs 23.

2006-03-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-browse-html-temp-list): Rename from
	gnus-article-browse-html-temp.
	(gnus-article-browse-delete-temp): Make it customizable.  Add
	`file'.  Adjust doc string.
	(gnus-article-browse-delete-temp-files): Add argument.  Allow
	query for each file.  Adjust doc string.
	(gnus-article-browse-html-parts): Add
	`gnus-article-browse-delete-temp-files' to